---
source: crates/pixi_build_discovery/tests/discovery.rs
expression: backend
---
backend-spec:
  type: json-rpc
  name: pixi-build-rattler-build
  command:
    type: environment-spec
    requirement:
      - pixi-build-rattler-build
      - "*"
    channels:
      - "https://conda.anaconda.org/conda-forge"
      - "https://prefix.dev/pixi-build-backends"
init-params:
  workspace-root: "file://<ROOT>/recipe_yaml"
  build-source: ~
  source-anchor: "file://<ROOT>/recipe_yaml"
  manifest-path: "file://<ROOT>/recipe_yaml/recipe.yaml"
  project-model: ~
  configuration: ~
  target-configuration: ~
